--- a/challenge1.html
+++ b/challenge1.html
@@ -13,7 +13,7 @@
           <legend>Email subscriptions</legend>
           <div id="check">
             <label>
-              <input type="checkbox" name="subscribe" id="subscribe" onclick = challenge1(this)>
+              <input type="checkbox" name="subscribe" id="subscribe">
               Check to toggle the email field.
             </label>
           </div>
@@ -29,7 +29,11 @@
         </fieldset>
       </form>
   </main>
-  <script src="js/jsChallenges.js"></script>
+  <script>
+    document.querySelector('#subscribe').addEventListener('click', function(e) {
+      document.querySelector('#emailDiv').style.display = e.target.checked ? 'block' : 'none';
+    });
+  </script>
 
 
   </body>
