--- a/challenge2.html
+++ b/challenge2.html
@@ -29,6 +29,8 @@
     <p class = "alert">
     If you are using the starter code, there is an accessibility errors on this page.  Fix them!!</p>
     </main>
-    <script src="js/jsChallenges.js"></script>
+    <script>
+      
+    </script>
   </body>
 </html>
